--- a/css/main.css
+++ b/css/main.css
@@ -1132,7 +1132,7 @@ header .container {
 
 .hero {
   width: 100%;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/hero-mob-1x-min.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./img/hero-mob-1x-min.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -1145,7 +1145,7 @@ header .container {
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("/img/hero-mob-2x-min.jpg");
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("./img/hero-mob-2x-min.jpg");
   }
 }
 
