--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -5,7 +5,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
         ),
-        url('./img/hero-mob-1x-min.jpg');
+        url(/img/hero-mob-1x-min.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -22,7 +22,7 @@
                 rgba(47, 48, 58, 0.4),
                 rgba(47, 48, 58, 0.4)
             ),
-            url('/img/hero-mob-2x-min.jpg');
+            url(/img/hero-mob-2x-min.jpg);
     }
     @media screen and (min-width: 768px) {
         background-image: linear-gradient(
