--- a/css/main.css
+++ b/css/main.css
@@ -1373,6 +1373,15 @@ footer .container {
   letter-spacing: 0.03em;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-left-box {
+    display: inline-block;
+    margin-top: 72px;
+    margin-bottom: 60px;
+    margin-left: 72px;
+  }
+}
+
 .footer-text {
   width: 231px;
   display: flex;
@@ -1472,18 +1481,33 @@ footer .container {
   width: 206px;
 }
 
+@media screen and (min-width: 768px) {
+  .social-container {
+    margin-left: 165px;
+    margin-top: 77px;
+  }
+}
+
 .wrap-footer-container {
   display: block;
 }
 
 @media screen and (min-width: 768px) {
   .wrap-footer-container {
-    display: flex;
+    display: inline-flex;
+    flex-wrap: wrap;
   }
 }
 
 .footer-form {
   margin-top: 60px;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-form {
+    margin-left: 162px;
+    margin-top: 0;
+  }
 }
 
 .form-email {
@@ -1527,6 +1551,12 @@ footer .container {
 .footer-btn:hover, .footer-btn:focus {
   background-color: #188ce8;
   cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .footer-btn {
+    margin-bottom: 48px;
+  }
 }
 
 .btn-footer-text {
