--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -18,6 +18,12 @@ footer .container {
         margin-bottom: 60px;
         margin-left: 72px;
     }
+    @media screen and (min-width: 1200px) {
+        display: inline-block;
+        margin-top: 60px;
+        margin-bottom: 60px;
+        margin-left: 0;
+    }
 }
 .footer-text {
     width: 231px;
@@ -83,6 +89,9 @@ footer .container {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+        justify-content: flex-start;
+    }
 }
 .social-box__link {
     width: 44px;
@@ -112,12 +121,20 @@ footer .container {
         margin-left: 165px;
         margin-top: 77px;
     }
+    @media screen and (min-width: 1200px) {
+        margin-left: 70px;
+        margin-top: 72px;
+    }
 }
 .wrap-footer-container {
     display: block;
     @media screen and (min-width: 768px) {
         display: inline-flex;
         flex-wrap: wrap;
+    }
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: nowrap;
     }
 }
 .footer-form {
@@ -126,12 +143,19 @@ footer .container {
         margin-left: 162px;
         margin-top: 0;
     }
-    // margin-left: 93px;
+    @media screen and (min-width: 1200px) {
+        margin-top: 72px;
+        margin-left: 93px;
+    }
 }
 .form-email {
     display: flex;
     flex-direction: column;
     align-items: center;
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-direction: row;
+    }
 }
 .footer-form__title {
     font-family: inherit;
@@ -142,6 +166,9 @@ footer .container {
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
+    @media screen and (min-width: 1200px) {
+        justify-content: flex-start;
+    }
 }
 .footer-btn {
     width: 200px;
@@ -154,7 +181,6 @@ footer .container {
     border-radius: 4px;
     text-align: center;
     padding-left: 29px;
-    // margin-left: 12px;
     margin-top: 20px;
     margin-bottom: 60px;
     transition-property: background-color;
@@ -167,6 +193,11 @@ footer .container {
     }
     @media screen and (min-width: 768px) {
         margin-bottom: 48px;
+    }
+    @media screen and (min-width: 1200px) {
+        margin-top: 0;
+        margin-left: 12px;
+        margin-bottom: 0;
     }
 }
 .btn-footer-text {
