--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -2,9 +2,9 @@
     width: 100%;
     margin: 0 auto;
     box-sizing: border-box;
-    @media screen and (max-width: 480px) {
-        width: 480px;
-    }
+    // @media screen and (max-width: 479px) {
+    //     width: 480px;
+    // }
     @media screen and (min-width: 480px) {
         width: 480px;
     }
