--- a/sass/components/_menu-container.scss
+++ b/sass/components/_menu-container.scss
@@ -12,6 +12,9 @@
     @media screen and (min-width: 768px) {
         display: none;
     }
+    @media screen and (max-width: 479px) {
+        display: none;
+    }
 }
 .menu-container.is-open {
     transform: translateX(0);
